--- a/สมาชิกในกลุ่ม.md
+++ b/สมาชิกในกลุ่ม.md
@@ -1,5 +1,5 @@
-# EMAG-Group
-#สมาชิกในกลุ่ม งานแกล๊กอีหมุ่ม 
+## EMAG-Group
+# สมาชิกในกลุ่ม งานแกล๊กอีหมุ่ม 
 # 1.สิริวิมล บุญกล่ำ    6310554018 
 # 2.ภูรินท์ วิชชุไตรภพ 6310551795 
 # 3.เบญจพล สุขสงค์ 6310551698  
